Here's the commented version of the code:

```c++
// Copyright 2023 The gRPC Authors

#include "src/core/lib/event_engine/work_queue/basic_work_queue.h"

#include <grpc/support/port_platform.h>

#include <utility>

#include "src/core/lib/event_engine/common_closures.h"
#include "src/core/util/sync.h"

namespace grpc_event_engine::experimental {

// Constructor for BasicWorkQueue that takes an owner pointer
// owner: Pointer to the entity that owns this work queue
BasicWorkQueue::BasicWorkQueue(void* owner) : owner_(owner) {}

// Checks if the work queue is empty
// Returns: true if the queue is empty, false otherwise
bool BasicWorkQueue::Empty() const {
  grpc_core::MutexLock lock(&mu_);  // Lock the mutex for thread safety
  return q_.empty();
}

// Gets the current size of the work queue
// Returns: Number of elements in the queue
size_t BasicWorkQueue::Size() const {
  grpc_core::MutexLock lock(&mu_);  // Lock the mutex for thread safety
  return q_.size();
}

// Removes and returns the most recently added work item (LIFO order)
// Returns: Pointer to the most recent Closure, or nullptr if queue is empty
EventEngine::Closure* BasicWorkQueue::PopMostRecent() {
  grpc_core::MutexLock lock(&mu_);  // Lock the mutex for thread safety
  if (q_.empty()) return nullptr;
  auto tmp = q_.back();  // Get the last element
  q_.pop_back();         // Remove the last element
  return tmp;
}

// Removes and returns the oldest work item (FIFO order)
// Returns: Pointer to the oldest Closure, or nullptr if queue is empty
EventEngine::Closure* BasicWorkQueue::PopOldest() {
  grpc_core::MutexLock lock(&mu_);  // Lock the mutex for thread safety
  if (q_.empty()) return nullptr;
  auto tmp = q_.front();  // Get the first element
  q_.pop_front();         // Remove the first element
  return tmp;
}

// Adds a work item to the end of the queue
// closure: Pointer to the Closure to be added
void BasicWorkQueue::Add(EventEngine::Closure* closure) {
  grpc_core::MutexLock lock(&mu_);  // Lock the mutex for thread safety
  q_.push_back(closure);
}

// Adds a callable work item to the end of the queue
// The invocable is wrapped in a SelfDeletingClosure for automatic cleanup
// invocable: Callable object to be executed as a work item
void BasicWorkQueue::Add(absl::AnyInvocable<void()> invocable) {
  grpc_core::MutexLock lock(&mu_);  // Lock the mutex for thread safety
  q_.push_back(SelfDeletingClosure::Create(std::move(invocable)));
}

}  // namespace grpc_event_engine::experimental
```

The comments explain:
1. The purpose of each method
2. The parameters and return values
3. Thread-safety mechanisms (mutex locking)
4. Special behaviors (like SelfDeletingClosure wrapping)
5. The queue operation semantics (FIFO vs LIFO for Pop methods)

The comments are kept concise while providing all the essential information a developer would need to understand and maintain this code.